# cobalt-kiosk-data-template

./: #cobalt-kiosk-data-template.cabal#  .gitignore  README.md  TAGS  aeson-datatemplate.json  aeson-datatemplateentry.json  cabal.config  changelog.md  circle.yml  cobalt-form.xml  cobalt-kiosk-data-template.cabal  stack.yaml  template-table.serial
benchmarks/: CriterionBenchmarks.hs
src/Kiosk/Backend/: Data.hs  Table.hs
src/Kiosk/Backend/Data/: #DataTemplateEntryKey.hs#  .#Command attempted to use minibuffer while in minibuffer  Command attempted to use minibuffer while in minibuffer  DataTemplate.hs  DataTemplateEntry.hs  DataTemplateEntryKey.hs  Internal.hs  InvoiceTemplate.hs  MigrationClass.hs  Migrations.hs  ReportTemplate.hs
src/Kiosk/Backend/Data/Migrations/: CobaltBaseForm.hs  FormVersionZero.hs  Standardization.hs
src/ReportTemplate/: Internal.hs
src/Text/Regex/TDFA/: Text.hs
test/: Generators.hs  TestImport.hs
test/Kiosk/Backend/: CSVSpec.hs  DataSpec.hs  TableSpec.hs
test/Kiosk/Backend/Data/: DataTemplateEntrySpec.hs  MigrationsSpec.hs  MigrationsSpec.hs~  ReportTemplateSpec.hs
test/Kiosk/Backend/Data/Migrations/: NormalizationSpec.hs  StandardizationSpec.hs
test/Regex/: Genex.hs
test/Regex/Genex/: Normalize.hs
test/ReportTemplate/: Internal.hs  InternalSpec.hs
tests/: DocTests.hs
