Name:                   cobalt-kiosk-data-template
Version:                1.5.2
Author:                 Lingpo Huang <lingpo.huang@plowtech.net>
Maintainer:             Lingpo Huang <lingpo.huang@plowtech.net>
License:                BSD3
License-File:           LICENSE
Category:               Apple
Synopsis:               Combined Form Data and Form Template for Cobalt Kiosk Application Backend
Description:            Combined Form Data and Form Template for Cobalt Kiosk Application Backend
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-source-files:     README.md

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Kiosk.Backend.Data
                        Kiosk.Backend.Data.DataTemplateEntry
                        Kiosk.Backend.Data.MigrationClass
                        Kiosk.Backend.Data.Migrations
                        Kiosk.Backend.Data.Migrations.Standardization
                        Kiosk.Backend.Data.Migrations.FormVersionZero
                        Kiosk.Backend.Data.Migrations.CobaltBaseForm
                        Kiosk.Backend.Data.DataTemplate
                        Kiosk.Backend.Data.DataTemplateEntryKey

  Other-Modules:        
                         
  Build-Depends:        aeson
                      , base                       >= 4 && < 5
                      , bytestring >= 0.10.4.0
                      , cassava >= 0.4.0
                      , cereal >= 0.4.0
                      , cobalt-kiosk-form-template >= 1.4.2
                      , containers >= 0.5.5.1
                      , either >= 4.3.1
                      , hashable >= 1.2.3.1
                      , lens         >= 4.0
                      , old-locale >= 1.0.0.6
                      , plow-extras-time  >= 0.1.1
                      , regex-tdfa >= 1.2.0
                      , regex-tdfa-text >= 1.0.0.2
                      , text >= 1.1
                      , time >= 1.4.2
                      , unordered-containers >= 0.2.5.1
                      , uuid >= 1.3.8
                      , vector >= 0.10.12.2


Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        HUnit
                      , QuickCheck
                      , aeson
                      , aeson-serialize
                      , attoparsec
                      , base
                      , bytestring
                      , cassava
                      , cereal
                      , cobalt-kiosk-form-template 
                      , containers >= 0.5.5.1
                      , containers >= 0.5.5.1
                      , either
                      , hashable
                      , hspec
                      , lens
                      , old-locale
                      , parsers
                      , plow-extras-time
                      , primitive-generator-mocks
                      , regex-genex
                      , regex-tdfa
                      , regex-tdfa-text
                      , serial-test-generators >= 0.1.3
                      , template-haskell
                      , text
                      , time
                      , unordered-containers
                      , uuid
                      , vector


Source-Repository head
  Type:                 git
  Location:             git@github.com:plow-technologies/cobalt-kiosk-data-template.git
