Name:                   cobalt-kiosk-data-template
Version:                1.8.2
Author:                 Lingpo Huang <lingpo.huang@plowtech.net>
Maintainer:             Scott Murphy <scott.murphy@plowtech.net>
License:                BSD3
License-File:           LICENSE
Category:               Ipad
Synopsis:               Combined Form Data and Form Template for Cobalt Kiosk Application Backend
Description:            Combined Form Data and Form Template for Cobalt Kiosk Application Backend
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-source-files:     README.md

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Kiosk.Backend.Data
                        Kiosk.Backend.Data.DataTemplateEntry
                        Kiosk.Backend.Data.MigrationClass
                        Kiosk.Backend.Data.Migrations
                        Kiosk.Backend.Data.Migrations.Standardization
                        Kiosk.Backend.Data.Migrations.FormVersionZero
                        Kiosk.Backend.Data.Migrations.CobaltBaseForm
                        Kiosk.Backend.Data.DataTemplate
                        Kiosk.Backend.Data.InvoiceTemplate
                        Kiosk.Backend.Data.ReportTemplate
                        Kiosk.Backend.Data.DataTemplateEntryKey
                        Text.Regex.TDFA.Text

  Other-Modules:

  Build-Depends:        aeson
                      , base           >= 4.8   && < 5
                      , bytestring
                      , cassava
                      , cereal
                      , cobalt-kiosk-form-template == 1.6.4.0
                      , containers
                      , either
                      , hashable
                      , lens
                      , old-locale
                      , plow-extras-time >= 0.1.1
                      , quickbooks       >= 0.5.0.1
                      , regex-tdfa
                      , regex-tdfa-text
                      , text
                      , time
                      , unordered-containers
                      , uuid
                      , vector
                      , xlsx >= 0.1.0.4 && < 0.2.0.0
                      , mtl
                      , array
                      , regex-base
                      , report-template


Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  other-modules:        Generators
                        Kiosk.Backend.CSVSpec
                        Kiosk.Backend.Data.DataTemplateEntrySpec
                        Kiosk.Backend.Data.Migrations.NormalizationSpec
                        Kiosk.Backend.Data.Migrations.StandardizationSpec
                        Kiosk.Backend.Data.MigrationsSpec
                        Kiosk.Backend.Data.ReportTemplateSpec
                        Kiosk.Backend.DataSpec
                        Kiosk.Backend.TableSpec
                        Regex.Genex
                        Regex.Genex.Normalize
                        TestImport
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        HUnit
                      , QuickCheck
                      , aeson
                      , aeson-serialize
                      , attoparsec
                      , base       >= 4.8   && < 5
                      , bytestring
                      , cassava
                      , cereal
                      , cobalt-kiosk-data-template
                      , cobalt-kiosk-form-template
                      , containers
                      , either
                      , hashable
                      , hspec
                      , old-time
                      , lens
                      , old-locale
                      , parsers
                      , plow-extras-time
                      , primitive-generator-mocks
                      , quickbooks       >= 0.5.0.1
                      , regex-genex
                      , regex-tdfa
                      , regex-tdfa-text
                      , serial-test-generators >= 0.1.3
                      , template-haskell
                      , text
                      , time
                      , unordered-containers
                      , uuid
                      , vector
                      , xlsx
                      , array
                      , regex-base
                      , mtl
                      , stream-monad
                      , report-template


benchmark criterion-benchmarks
  build-depends:
    base,
    cobalt-kiosk-data-template,
    cobalt-kiosk-form-template,
    criterion,
    uuid
  default-language: Haskell2010
  hs-source-dirs:   benchmarks
  main-is:          CriterionBenchmarks.hs
  type:             exitcode-stdio-1.0


test-suite doctests
  build-depends:
    base,
    doctest >= 0.10.1,
    QuickCheck >= 2.8
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  hs-source-dirs:   tests
  main-is:          DocTests.hs
  type:             exitcode-stdio-1.0

Source-Repository head
  Type:                 git
  Location:             git@github.com:plow-technologies/cobalt-kiosk-data-template.git
